[gd_scene load_steps=5 format=3 uid="uid://c8o3r0vw8y54p"]

[ext_resource type="Script" path="res://UI/MainMenu/main_menu.gd" id="1_fpw8v"]
[ext_resource type="Theme" uid="uid://bxeu6c7queyrg" path="res://Theme/MainMenuTheme.tres" id="2_2gx0t"]
[ext_resource type="Texture2D" uid="uid://u4aw5ckc6dmv" path="res://Assets/StartScreen.png" id="2_a35lu"]
[ext_resource type="AudioStream" uid="uid://d2mn3snsreux5" path="res://Assets/MainTheme/PrepPhase.mp3" id="2_ibswh"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fpw8v")

[node name="MainMenu" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_ibswh")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_a35lu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.495
anchor_top = 0.817
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -94.4
offset_top = -394.36
offset_right = 80.0
offset_bottom = -324.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.5, 1.5)
theme_override_constants/separation = 20
alignment = 1

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_2gx0t")
text = "START"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_2gx0t")
text = "DAYS"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_2gx0t")
text = "QUIT"

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
